完善文章质量规范，审阅全库内容并修复配图与预览链路