@@ -1,25 +1,25 @@
 ---
 title: "Java 核心技术：深入理解 JVM"
 pubDate: "2021-06-15"
-description: "系统剖析JVM核心机制，从类加载的双亲委派模型到运行时内存布局，从PermGen到Metaspace的演进，再到七大垃圾收集器的设计原理与选型策略，构建完整的JVM知识体系。"
+description: "系统剖析JVM核心机制，从类加载的双亲委派模型到运行时内存布局，区分历史实现与现代版本，解释垃圾回收、停顿与资源使用的关系，形成可验证的调优思路。"
 tags: ["JVM", "Java", "垃圾回收", "类加载", "性能调优"]
 series:
   key: "java-core"
 ---
 
-# 深入理解JVM：从类加载到垃圾回收的全链路剖析
-
-> Java 程序的生命周期始于类加载，终于垃圾回收。理解 JVM 的工作原理，不仅是性能调优的基础，更是理解 Java 语言设计哲学的关键。
+> 排查 JVM 问题，要把类由谁加载、内存由谁持有、回收为何跟不上联系起来。程序退出不保证执行最后一次 GC；看见 GC 活跃也不等于已经找到内存增长的原因。
 
 JVM（Java Virtual Machine）是 Java 生态的基石。它屏蔽了底层硬件差异，为 Java 程序提供了一个统一的运行时环境。但这层抽象并非没有代价——内存管理、类加载、即时编译等机制的复杂性，往往是生产环境问题的根源。
 
 本文将沿着 Java 程序的执行链路，从类文件的加载、运行时内存的分配，到对象的回收，系统梳理 JVM 的核心机制。
 
+本文将 JVM 规范与 HotSpot 实现分开讨论。类加载器和对象头的历史细节以 JDK 8 为例；涉及现代调优时以 JDK 21 为参考版本，并明确后续补充，避免把已移除组件当成当前选项。
+
 ## 一、类加载机制
 
 ### 1.1 类的生命周期
 
-一个 Java 类从被加载到 JVM 内存，到最终被卸载，经历以下阶段：
+类的主要阶段如下。解析允许延迟进行，并非所有符号都必须在初始化前解析；类也不一定在进程结束前被卸载：
 
 ```
 加载（Loading）→ 验证（Verification）→ 准备（Preparation）
@@ -33,13 +33,13 @@ JVM（Java Virtual Machine）是 Java 生态的基石。它屏蔽了底层硬件
 |------|----------|------|
 | **加载** | 读取 .class 字节流，生成 Class 对象 | 由 ClassLoader 执行 |
 | **验证** | 校验字节码的合法性和安全性 | 文件格式、元数据、字节码、符号引用验证 |
-| **准备** | 为类的静态变量分配内存并赋零值 | `static int a = 10` 在此阶段 a = 0 |
+| **准备** | 为类的静态变量分配内存并赋默认值 | 常规赋值在初始化阶段；常量变量还涉及 ConstantValue 属性规定的初始化 |
 | **解析** | 将符号引用替换为直接引用 | 类、字段、方法、接口方法的解析 |
 | **初始化** | 执行类构造器 `<clinit>()` | 静态变量赋值和静态代码块的执行 |
 
 ### 1.2 ClassLoader 体系
 
-JVM 内置三层 ClassLoader，形成层级结构：
+JDK 8 的典型 HotSpot 类加载器层级包含 Bootstrap、Extension 和 Application。JDK 9 起扩展机制被移除，Extension 对应角色由 Platform ClassLoader 接替，也不再使用 rt.jar 布局。以下表格和 Launcher 片段仅用于解释 JDK 8：
 
 ```
 Bootstrap ClassLoader（引导类加载器）
@@ -74,9 +74,9 @@ public Launcher() {
 
 **核心规则**：当一个 ClassLoader 收到类加载请求时，首先将请求委派给父加载器处理，只有当父加载器无法完成加载时，才由自身尝试加载。
 
-执行流程（`ClassLoader.loadClass()` 源码逻辑）：
+下面是省略锁、解析与异常声明的阅读伪代码，不是可直接编译的 ClassLoader 实现：
 
-```java
+```text
 protected Class<?> loadClass(String name, boolean resolve) {
     // 1. 检查类是否已被加载
     Class<?> c = findLoadedClass(name);
@@ -104,11 +104,11 @@ protected Class<?> loadClass(String name, boolean resolve) {
 **双亲委派的价值**：
 
 - **安全性**：防止核心类库被篡改。即使自定义了一个 `java.lang.String`，也不会被加载，因为 Bootstrap ClassLoader 会优先加载 rt.jar 中的版本
-- **唯一性**：同一个类在 JVM 中只会被加载一次，避免类的重复加载
+- **共享核心类型**：委派可避免重复定义相同基础类；但 JVM 中类型身份由二进制名称和定义它的类加载器共同决定，同名类可由不同加载器分别定义。[JVMS 类加载规范](https://docs.oracle.com/javase/specs/jvms/se21/html/jvms-5.html)
 
-### 1.4 打破双亲委派
+### 1.4 委派模型的扩展
 
-双亲委派并非不可逾越。以下场景需要打破这一模型：
+父优先是常见策略，不是所有加载器都必须遵循的唯一组织方式。以下几种机制需要分别理解：
 
 **场景一：SPI 机制**
 
@@ -120,16 +120,16 @@ Java SPI（Service Provider Interface）的典型问题：核心接口由 Bootst
 // JDBC DriverManager 的实现
 ServiceLoader<Driver> loadedDrivers = ServiceLoader.load(Driver.class);
 // ServiceLoader.load() 内部使用 Thread.currentThread().getContextClassLoader()
-// 从而绕过了双亲委派，用 AppClassLoader 加载 SPI 实现类
+// 由上下文加载器查找提供者，其加载类时仍可采用父优先委派
 ```
 
 **场景二：热部署**
 
-OSGi、Tomcat 等容器需要实现类的热替换。Tomcat 为每个 Web 应用创建独立的 ClassLoader（`WebAppClassLoader`），它优先从自身路径加载类，找不到才委派给父加载器——这与双亲委派的顺序恰好相反。
+OSGi、Tomcat 等容器需要实现类的热替换。Tomcat 为每个 Web 应用创建独立的 ClassLoader（`WebAppClassLoader`），它对应用类可采用本地优先策略，但 Java 核心类及部分容器 API 有委派例外，不能理解为所有类都完全反转顺序。
 
 **场景三：自定义 ClassLoader**
 
-通过重写 `findClass()` 方法实现自定义加载逻辑，如从网络加载、加密 class 文件的解密加载等：
+只重写 `findClass()` 会保留继承的父优先 `loadClass()` 流程，并未打破双亲委派。下面的局部示例省略了读取和解密方法，用于说明自定义字节来源：
 
 ```java
 public class EncryptedClassLoader extends ClassLoader {
@@ -148,28 +148,11 @@ public class EncryptedClassLoader extends ClassLoader {
 
 JVM 运行时内存分为线程私有和线程共享两大类：
 
-```
-┌─────────────────── JVM 内存 ───────────────────────┐
-│                                                      │
-│  线程私有                    线程共享                   │
-│  ┌──────────────────┐      ┌────────────────────┐   │
-│  │ 程序计数器（PC）    │      │       堆（Heap）     │   │
-│  │ 虚拟机栈（Stack）   │      │  ┌──────────────┐  │   │
-│  │ 本地方法栈         │      │  │  新生代        │  │   │
-│  └──────────────────┘      │  │  Eden + S0/S1 │  │   │
-│                             │  ├──────────────┤  │   │
-│                             │  │  老年代        │  │   │
-│                             │  └──────────────┘  │   │
-│                             ├────────────────────┤   │
-│                             │  元空间（Metaspace）  │   │
-│                             │  （本地内存）          │   │
-│                             └────────────────────┘   │
-└──────────────────────────────────────────────────────┘
-```
+[![线程私有区域与共享区域分开；元空间和堆分代属于具体实现](/images/blog/jvm-runtime/runtime-areas.svg)](/images/blog/jvm-runtime/runtime-areas.svg)
 
 | 区域 | 线程属性 | 存储内容 | 异常 |
 |------|----------|----------|------|
-| **程序计数器** | 私有 | 当前线程执行的字节码行号 | 唯一不会 OOM 的区域 |
+| **程序计数器** | 私有 | 当前执行位置；执行 native 方法时规范不定义其值 | JVM 规范未为该区域规定 OOM 条件 |
 | **虚拟机栈** | 私有 | 栈帧（局部变量表、操作数栈、方法返回地址） | StackOverflowError / OOM |
 | **本地方法栈** | 私有 | Native 方法调用的栈帧 | StackOverflowError / OOM |
 | **堆** | 共享 | 对象实例和数组 | OutOfMemoryError: Java heap space |
@@ -177,11 +160,11 @@ JVM 运行时内存分为线程私有和线程共享两大类：
 
 ### 2.2 从 PermGen 到 Metaspace
 
-Java 8 是 JVM 内存模型的一个重要分水岭——**永久代（PermGen）被元空间（Metaspace）取代**。
+HotSpot 的 Java 8 实现是类元数据存储的一个重要分水岭——**永久代（PermGen）被元空间（Metaspace）取代**。
 
 **永久代的问题**：
 
-- 大小固定（默认 64MB，`-XX:MaxPermSize`），难以预估合理值
+- 容量受 `-XX:PermSize` / `-XX:MaxPermSize` 等配置约束，默认值与实现及平台相关，难以统一预估
 - 类元数据与普通 Java 对象混在同一 GC 管理体系中，增加了 Full GC 的复杂度
 - 动态生成类（如大量使用反射、动态代理）容易触发 `java.lang.OutOfMemoryError: PermGen space`
 
@@ -189,15 +172,15 @@ Java 8 是 JVM 内存模型的一个重要分水岭——**永久代（PermGen�
 
 | 特性 | PermGen（Java 7-） | Metaspace（Java 8+） |
 |------|--------------------|-----------------------|
-| 存储位置 | JVM 堆内 | 本地内存（Native Memory） |
-| 默认大小 | 固定（64MB） | 无上限（受物理内存限制） |
+| 存储位置 | HotSpot 管理的永久代区域，不计入普通对象堆的 Xmx | 本地内存（Native Memory） |
+| 容量约束 | 受永久代配置与平台默认值限制 | 可由 MaxMetaspaceSize 限制，也受进程资源限制 |
 | 内存分配 | 与堆对象相同的 GC 管理 | 每个 ClassLoader 独立分配，线性分配 |
-| 回收策略 | Full GC 触发 | ClassLoader 被回收时，整块释放 |
+| 回收策略 | 结合收集器进行类卸载 | 类加载器关联的元数据可在满足卸载条件时回收 |
 | 调优参数 | `-XX:MaxPermSize` | `-XX:MaxMetaspaceSize`、`-XX:MetaspaceSize` |
 
 **元空间的内存模型**：
 
-每个 ClassLoader 拥有独立的内存块（chunk）。加载新类时，从当前 chunk 中线性分配空间。当 ClassLoader 被 GC 回收时，其对应的所有 chunk 一次性释放——不存在单个类的逐一回收。
+每个 ClassLoader 拥有独立的内存块（chunk）。加载新类时，从当前 chunk 中线性分配空间。普通类的元数据生命周期通常与定义它们的加载器关联；隐藏类等特殊情况另有规则，不能概括为永远不存在单类卸载。
 
 ```
 ClassLoader A → [chunk1: Class1 Class2 Class3]
@@ -215,22 +198,9 @@ ClassLoader C → [chunk3: Class6]
 
 一个 Java 对象在堆中的内存布局由三部分组成：
 
-```
-┌────────────────────────────────────┐
-│          对象头（Header）             │
-│  ┌──────────────────────────────┐  │
-│  │ Mark Word（标记字）             │  │  → 哈希码、GC 年龄、锁标志位
-│  │ Klass Pointer（类型指针）       │  │  → 指向元空间中的 Class 元数据
-│  │ Array Length（仅数组对象）       │  │
-│  └──────────────────────────────┘  │
-├────────────────────────────────────┤
-│          实例数据（Instance Data）    │  → 字段值（含父类字段）
-├────────────────────────────────────┤
-│          对齐填充（Padding）          │  → 补齐到 8 字节的整数倍
-└────────────────────────────────────┘
-```
+[![对象由对象头、实例数据和可选对齐填充组成，尺寸依配置而变](/images/blog/jvm-runtime/object-layout.svg)](/images/blog/jvm-runtime/object-layout.svg)
 
-**Mark Word 的结构**（64 位 JVM）：
+**传统 Mark Word 的简化结构**（JDK 8、64 位 HotSpot；不适用于所有后续锁实现或对象头模式）：
 
 | 锁状态 | 存储内容 | 标志位 |
 |--------|----------|--------|
@@ -240,7 +210,7 @@ ClassLoader C → [chunk3: Class6]
 | 重量级锁 | 指向 Monitor 的指针 | 10 |
 | GC 标记 | 空 | 11 |
 
-注意：GC 分代年龄占 **4 bit**，最大值为 15。这就是为什么对象晋升老年代的默认阈值 `-XX:MaxTenuringThreshold` 不能超过 15。
+注意：GC 分代年龄占 **4 bit**，最大值为 15。这约束了相关分代收集器的年龄表示范围。实际晋升可早于配置上限，默认值也与收集器有关。
 
 ## 三、垃圾回收
 
@@ -258,8 +228,9 @@ ClassLoader C → [chunk3: Class6]
 ```java
 // A 和 B 互相引用，但外部已无法访问
 // 引用计数永远不为 0，无法被回收
-Object a = new Object();  // a.refCount = 1
-Object b = new Object();  // b.refCount = 1
+class Node { Node field; }
+Node a = new Node();  // 假设采用简单引用计数时为 1
+Node b = new Node();  // 假设采用简单引用计数时为 1
 a.field = b;              // b.refCount = 2
 b.field = a;              // a.refCount = 2
 a = null;                 // a.refCount = 1（仍不为 0）
@@ -268,7 +239,7 @@ b = null;                 // b.refCount = 1（仍不为 0）
 
 **可达性分析（Reachability Analysis）**
 
-JVM 实际采用的方案。从一组称为 **GC Roots** 的根对象出发，沿引用链向下遍历。不在任何引用链上的对象即为不可达，判定为垃圾。
+JVM 实际采用的方案。从一组称为 **GC Roots** 的根对象出发，沿引用链向下遍历。不再从根可达的对象可以成为回收候选，还要结合引用类型和具体回收处理，不能理解为立刻释放。
 
 GC Roots 包括：
 
@@ -283,9 +254,9 @@ GC Roots 包括：
 
 ### 3.2 安全点与 Stop-The-World
 
-GC 在执行可达性分析时，需要确保对象引用关系不会发生变化，因此必须暂停所有应用线程——即 **Stop-The-World（STW）**。
+部分 GC 阶段需要在一致状态下暂停应用线程，即 **Stop-The-World（STW）**。并发收集器可借助读写屏障和记录机制，让大部分标记或迁移工作与应用并行，不能说整个可达性分析过程都必须暂停。
 
-但并非任何时刻都可以暂停线程。线程只有运行到**安全点（Safepoint）**时才能暂停。安全点通常设置在：
+但并非任何时刻都可以暂停线程。执行 Java 代码的线程会在合适位置配合 safepoint，处于某些阻塞或 native 状态的线程也可被视为已安全。检查位置依赖解释器、编译器和版本，常见位置包括：
 
 - 方法调用处
 - 循环的回边（back edge）
@@ -352,16 +323,16 @@ GC 时将存活对象从对象空间复制到空闲空间，然后清空整个�
 7. 年龄达到阈值（默认 15）的对象晋升老年代
 ```
 
-**对象直接进入老年代的条件**：
+**晋升与特殊分配的影响因素**（具体规则依赖收集器，下列不能作为通用参数清单）：
 
-- 大对象（超过 `-XX:PretenureSizeThreshold`）
-- 长期存活对象（年龄超过阈值）
+- 大对象：部分收集器支持 PretenureSizeThreshold；不能将该参数套用于所有 GC
+- 长期存活对象达到晋升条件，这属于经历回收后的晋升而非首次直接分配
 - Survivor 空间中相同年龄对象总大小超过 Survivor 一半（动态年龄判定）
 - Minor GC 后 Survivor 放不下的存活对象
 
 ### 3.4 垃圾收集器
 
-JVM 提供了多种垃圾收集器，分为新生代和老年代两组，可以组合使用：
+下面保留历史收集器对照，用于读懂旧资料。可组合的范围有版本限制，整堆收集器也不是任意新老年代组合。CMS 已在 JDK 14 移除，不应再作为 JDK 21 的启动选项。[JDK 迁移说明](https://docs.oracle.com/en/java/javase/21/migrate/removed-tools-and-components.html)
 
 | 收集器 | 分代 | 算法 | 线程 | 特点 |
 |--------|------|------|------|------|
@@ -371,7 +342,7 @@ JVM 提供了多种垃圾收集器，分为新生代和老年代两组，可以�
 | **Serial Old** | 老年代 | 标记-整理 | 单线程 | Serial 的老年代版本 |
 | **Parallel Old** | 老年代 | 标记-整理 | 多线程 | Parallel Scavenge 的老年代搭档 |
 | **CMS** | 老年代 | 标记-清除 | 并发 | 以最短停顿为目标 |
-| **G1** | 整堆 | 分区 + 复制/整理 | 并发 | 可预测停顿时间，JDK 9 默认 |
+| **G1** | 整堆 | 分区 + 复制/整理 | 并发 | 以停顿目标引导回收选择；JDK 9 起常见服务端配置默认 |
 
 **CMS（Concurrent Mark Sweep）**
 
@@ -384,7 +355,7 @@ CMS 的设计目标是**最短回收停顿时间**。它采用标记-清除算�
 | 重新标记 | 是 | 修正并发标记期间因程序运行产生的引用变动 |
 | 并发清除 | 否 | 清除不可达对象 |
 
-CMS 的两次 STW 都很短暂，绝大部分工作与应用线程并发执行。
+CMS 将部分工作移到并发阶段，但重新标记或并发失败后的回退仍可能造成长停顿，不能保证两次 STW 都很短。
 
 **CMS 的局限**：
 
@@ -394,21 +365,16 @@ CMS 的两次 STW 都很短暂，绝大部分工作与应用线程并发执行�
 
 **G1（Garbage-First）**
 
-G1 是 JDK 9 开始的默认收集器，它将堆划分为多个大小相等的 **Region**（默认 2048 个），每个 Region 可以动态充当 Eden、Survivor 或 Old 区。
+G1 从 JDK 9 起成为常见服务端配置的默认收集器，它将堆划分为多个大小相等的 **Region**（Region 大小由堆规模和配置确定，通常以约 2048 个为选择目标，并非数量固定），每个 Region 可以动态充当 Eden、Survivor 或 Old 区。
 
-```
-┌────┬────┬────┬────┬────┬────┬────┬────┐
-│  E │  E │  S │  O │  O │  H │  E │  O │
-└────┴────┴────┴────┴────┴────┴────┴────┘
-E = Eden    S = Survivor    O = Old    H = Humongous
-```
+[![G1 将堆划分为等大小 Region，角色包括 Eden、Survivor、Old 与 Humongous](/images/blog/jvm-runtime/g1-regions.svg)](/images/blog/jvm-runtime/g1-regions.svg)
 
 G1 的核心优势：
 
 | 特性 | 说明 |
 |------|------|
-| **可预测的停顿** | 通过 `-XX:MaxGCPauseMillis` 设定目标停顿时间，G1 优先回收收益最大的 Region |
-| **无内存碎片** | Region 间使用复制算法，Region 内使用标记-整理 |
+| **停顿目标** | MaxGCPauseMillis 是软目标，G1 根据预测成本选择回收集合，不是延迟上限保证 |
+| **疏散存活对象** | 回收集合中的存活对象复制到其他 Region；仍有 Region 尾部浪费和大对象连续空间约束 |
 | **大对象处理** | 超过 Region 50% 的大对象分配在 Humongous Region |
 | **混合回收** | Mixed GC 同时回收新生代和部分老年代 Region |
 
@@ -421,15 +387,17 @@ G1 的 GC 过程：
 | 最终标记 | 是 | 处理并发阶段遗留的 SATB（Snapshot-At-The-Beginning）记录 |
 | 筛选回收 | 是 | 按回收收益排序 Region，将存活对象复制到空 Region |
 
+上述 G1 阶段是简化组织，常规 Young GC、并发标记周期与后续 Mixed GC 不应被读作每轮都严格走完的一条固定流水线。[JDK 21 G1 说明](https://docs.oracle.com/en/java/javase/21/gctuning/garbage-first-g1-garbage-collector1.html)
+
 ### 3.5 收集器选型决策
 
 | 场景 | 推荐收集器 | 关键参数 |
 |------|-----------|----------|
 | 单核 / 小堆（< 1GB） | Serial + Serial Old | `-XX:+UseSerialGC` |
 | 多核 / 吞吐量优先 | Parallel Scavenge + Parallel Old | `-XX:+UseParallelGC`（JDK 8 默认） |
-| 多核 / 延迟敏感 | ParNew + CMS | `-XX:+UseConcMarkSweepGC` |
-| 大堆（> 4GB）/ 延迟可控 | G1 | `-XX:+UseG1GC`（JDK 9+ 默认） |
-| 超大堆 / 超低延迟 | ZGC / Shenandoah | `-XX:+UseZGC`（JDK 11+） |
+| 维护旧版本 CMS 服务 | 仅在仍支持 CMS 的历史 JDK 中讨论 | 升级前验证目标版本及替代方案 |
+| 吞吐与停顿折中 | G1，按负载验证 | `-XX:+UseG1GC`（JDK 9+ 默认） |
+| 低延迟目标 | 评估 ZGC / Shenandoah | 核对 JDK 版本、发行版支持及并发回收资源开销 |
 
 ## 四、JVM 调优实践
 
@@ -438,11 +406,11 @@ G1 的 GC 过程：
 | 参数 | 说明 | 建议 |
 |------|------|------|
 | `-Xms` / `-Xmx` | 堆初始/最大大小 | 设为相同值，避免运行时动态扩容 |
-| `-Xmn` | 新生代大小 | 通常为堆的 1/3 到 1/2 |
+| `-Xmn` | 固定新生代大小 | 不套用固定比例；使用 G1 时通常保留自适应能力 |
 | `-XX:MetaspaceSize` | Metaspace 初始高水位线 | 根据类加载量设定，避免启动时频繁 Full GC |
 | `-XX:MaxMetaspaceSize` | Metaspace 上限 | 建议设定上限，防止内存泄漏耗尽系统内存 |
 | `-XX:SurvivorRatio` | Eden 与 Survivor 的比例 | 默认 8:1:1，一般无需调整 |
-| `-XX:MaxTenuringThreshold` | 晋升老年代的年龄阈值 | 默认 15，最大 15（4 bit 限制） |
+| `-XX:MaxTenuringThreshold` | 部分分代收集器的晋升年龄上限 | 核对目标收集器的默认值和实际年龄分布 |
 | `-XX:MaxGCPauseMillis` | G1 目标停顿时间 | 默认 200ms，根据业务 SLA 设定 |
 
 ### 4.2 常见问题与排查
@@ -453,25 +421,25 @@ G1 的 GC 过程：
 | **长时间 STW** | 应用周期性卡顿 | GC 日志分析、考虑切换为 G1/ZGC |
 | **OOM: Java heap space** | 堆内存不足 | 堆转储分析（`jmap -dump`）、排查内存泄漏 |
 | **OOM: Metaspace** | 类元数据空间耗尽 | 排查动态类生成（反射、CGLIB 代理）是否失控 |
-| **OOM: GC overhead limit** | GC 耗时超过 98% 但回收不到 2% 内存 | 通常是内存泄漏的征兆 |
+| **OOM: GC overhead limit** | GC 耗时超过 98% 但回收不到 2% 内存 | 可能是活跃数据过多、堆过小或泄漏；按对应收集器的触发规则检查 |
 
 ### 4.3 监控工具
 
 | 工具 | 用途 |
 |------|------|
 | `jstat -gc` | 实时查看 GC 统计（各代容量、GC 次数和耗时） |
-| `jmap -heap` | 查看堆内存使用概况 |
+| `jcmd <pid> GC.heap_info` | 查看目标进程堆信息；命令支持以 jcmd <pid> help 为准 |
 | `jmap -dump` | 导出堆转储文件（配合 MAT / VisualVM 分析） |
 | `jstack` | 导出线程快照（排查死锁、线程阻塞） |
-| `jcmd GC.class_stats` | 查看类元数据统计（替代 `jmap -permstat`） |
+| `jcmd <pid> VM.metaspace` | 在支持的版本中查看元空间，先核对 help |
 | GC 日志 | `-Xlog:gc*`（JDK 9+）/ `-XX:+PrintGCDetails`（JDK 8） |
 
 ## 总结
 
 JVM 的三大核心机制——类加载、内存管理、垃圾回收——构成了 Java 程序运行的底层基石：
 
-1. **类加载的双亲委派模型**保证了类的安全性和唯一性，但 SPI、热部署等场景需要理解如何合理打破它
+1. **类加载策略**决定类型可见范围；类型身份还包含定义加载器，委派不是 JVM 的唯一安全边界
 2. **从 PermGen 到 Metaspace 的演进**反映了 JVM 设计从"固定分配"到"弹性管理"的思路转变
-3. **GC 收集器的选型**没有最优解，只有最匹配的方案——吞吐量优先选 Parallel，延迟敏感选 CMS/G1/ZGC
+3. **GC 收集器的选型**没有最优解，只有最匹配的方案——吞吐量优先选 Parallel，延迟目标严格时在目标 JDK 支持的收集器中实测，不能把历史 CMS 参数直接复制过去
 
 > 理解 JVM 的意义不在于记住每个参数的默认值，而在于建立"代码行为 → JVM 行为 → 系统表现"的因果链，从而在生产问题出现时，能够从现象追溯到根因。
